Fix cumulative review findings: snapshot accessors, EOF bounds, fstat, message order
Track 8 track-level (cumulative) review-fix iteration, merged set from
the baseline/crash/concurrency cumulative reports:

- CN60 (should-fix): AbstractStorage.getCollectionNames and
  SchemaShared.getBlobCollections now COPY under their guarding locks
  instead of returning live backing views that escaped the lock. The
  exporter iterated those views with no lock held while concurrent DDL
  commits mutate the backing HashMap/IntSet under the write lock -
  JMM-undefined: a CME at best, silently skipped entries at worst,
  under-reading maxCollectionId and truncating an exit-0 export whose
  self-consistent manifest still verifies. Deterministic pins assert
  the snapshot property that makes the race impossible (the returned
  set must not reflect DDL performed after the call - a genuine
  cross-thread interleaving needs a HashMap resize racing an unlocked
  iterator and is not deterministically buildable). Side benefit:
  ImmutableSchema snapshots no longer silently track live blob-set
  changes.
- CS80: the hasNext() EOF-bound + loud post-loop truncation rejection
  (the 46b0446008 pattern) is extended from importInfo/importManifest
  to every remaining reader loop - collections, records, indexes
  (outer and inner), collectionsToIndex, brokenRids, schema classes,
  class fields, globalProperties, super-classes, properties,
  customFields - via a shared truncatedDump helper. Red-first: a dump
  truncated inside an indexes entry spun forever on stale reader state
  (silent CPU hang, TestTimedOutException at HEAD); the records family
  proved protected-by-accident at HEAD for every constructible cut
  (stale replays die on the rid-map unique key or stale-token parse
  errors) - its test pins the now-by-construction loudness with a
  timeout guard. All post-loop checks key on the missing terminator,
  never on hasNext(), so an honestly-closed structure cannot
  false-trip (R1-safe; t